[gd_scene load_steps=13 format=3 uid="uid://rj7xjbvomao1"]

[ext_resource type="Script" uid="uid://dlfsjy8pmmb5a" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="FontFile" uid="uid://f1wq1nfd60uv" path="res://m5x7.ttf" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://c8gvapwb045v5" path="res://absol.png" id="3_h2yge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
bg_color = Color(0.1882353, 0.18431373, 0.16470589, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c57u"]
bg_color = Color(0.1251151, 0.1633972, 0.12636474, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h2yge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bvp3"]
bg_color = Color(0.5568628, 0.84313726, 0.29411766, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lquwl"]
bg_color = Color(0.8980392, 0.79607844, 0.3019608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mycd"]
bg_color = Color(0.8156863, 0.41960785, 0.1882353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_272bh"]
bg_color = Color(0.42745098, 0.75686276, 0.9254902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vw27"]
bg_color = Color(0.3529412, 0.43137255, 0.8392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kek77"]
bg_color = Color(0.7411765, 0.23137255, 0.654902, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 601.0
offset_bottom = 99.0
color = Color(0.10880131, 0.18067473, 0.35337195, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_top = 92.0
offset_right = 601.0
offset_bottom = 538.0
color = Color(0.18807155, 0.18411666, 0.16673112, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = -1.0
offset_top = 538.0
offset_right = 600.0
offset_bottom = 801.0
color = Color(0.14031541, 0.13714147, 0.12444819, 1)

[node name="LoadButton" type="Button" parent="."]
offset_left = 7.0
offset_top = 8.0
offset_right = 339.49997
offset_bottom = 132.99998
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "LOAD LOG"

[node name="PokemonButton" type="Button" parent="."]
offset_left = 10.0
offset_top = 63.999996
offset_right = 449.99997
offset_bottom = 134.00002
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_h2yge")
text = "POKEMON"

[node name="LearnsetButton" type="Button" parent="."]
offset_left = 195.99998
offset_top = 63.999996
offset_right = 635.99994
offset_bottom = 134.00002
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_4c57u")
text = "LEARNSET"

[node name="FileDialog" type="FileDialog" parent="."]
oversampling_override = 1.0
use_native_dialog = true

[node name="FilePathLabel" type="Label" parent="."]
offset_left = 153.0
offset_top = 10.0
offset_right = 876.33325
offset_bottom = 176.66667
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "sdasdasda"
autowrap_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(136, 372)
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_h2yge")

[node name="TypeLabel" type="Label" parent="."]
offset_left = 18.0
offset_top = 155.0
offset_right = 954.6666
offset_bottom = 231.66669
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="AbilityLabel" type="Label" parent="."]
offset_left = 17.0
offset_top = 100.0
offset_right = 953.6667
offset_bottom = 176.66669
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="HPLabel" type="Label" parent="."]
offset_left = 274.0
offset_top = 463.00003
offset_right = 355.6667
offset_bottom = 523.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "100"
horizontal_alignment = 1

[node name="AttackLabel" type="Label" parent="."]
offset_left = 328.0
offset_top = 463.00003
offset_right = 409.6667
offset_bottom = 523.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "100"
horizontal_alignment = 1

[node name="DefenseLabel" type="Label" parent="."]
offset_left = 380.0
offset_top = 463.00003
offset_right = 461.6667
offset_bottom = 523.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "100"
horizontal_alignment = 1

[node name="SpAttackLabel" type="Label" parent="."]
offset_left = 433.0
offset_top = 463.0
offset_right = 514.6667
offset_bottom = 523.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "100"
horizontal_alignment = 1

[node name="SpDefenseLabel" type="Label" parent="."]
offset_left = 487.0
offset_top = 463.0
offset_right = 568.6667
offset_bottom = 523.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "100"
horizontal_alignment = 1

[node name="SpeedLabel" type="Label" parent="."]
offset_left = 539.0
offset_top = 463.0
offset_right = 620.6667
offset_bottom = 523.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "100"
horizontal_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 285.0
offset_top = 227.0
offset_right = 312.0
offset_bottom = 461.0
theme_override_styles/background = SubResource("StyleBoxEmpty_h2yge")
theme_override_styles/fill = SubResource("StyleBoxFlat_1bvp3")
max_value = 255.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="ProgressBar2" type="ProgressBar" parent="."]
offset_left = 338.0
offset_top = 227.0
offset_right = 365.0
offset_bottom = 461.0
theme_override_styles/background = SubResource("StyleBoxEmpty_h2yge")
theme_override_styles/fill = SubResource("StyleBoxFlat_lquwl")
max_value = 255.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="ProgressBar3" type="ProgressBar" parent="."]
offset_left = 391.0
offset_top = 227.0
offset_right = 418.0
offset_bottom = 461.0
theme_override_styles/background = SubResource("StyleBoxEmpty_h2yge")
theme_override_styles/fill = SubResource("StyleBoxFlat_7mycd")
max_value = 255.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="ProgressBar4" type="ProgressBar" parent="."]
offset_left = 443.0
offset_top = 227.0
offset_right = 470.0
offset_bottom = 461.0
theme_override_styles/background = SubResource("StyleBoxEmpty_h2yge")
theme_override_styles/fill = SubResource("StyleBoxFlat_272bh")
max_value = 255.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="ProgressBar5" type="ProgressBar" parent="."]
offset_left = 497.0
offset_top = 227.0
offset_right = 524.0
offset_bottom = 461.0
theme_override_styles/background = SubResource("StyleBoxEmpty_h2yge")
theme_override_styles/fill = SubResource("StyleBoxFlat_5vw27")
max_value = 255.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="ProgressBar6" type="ProgressBar" parent="."]
offset_left = 548.0
offset_top = 227.0
offset_right = 575.0
offset_bottom = 461.0
theme_override_styles/background = SubResource("StyleBoxEmpty_h2yge")
theme_override_styles/fill = SubResource("StyleBoxFlat_kek77")
max_value = 255.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="HPLabel2" type="Label" parent="."]
offset_left = 281.0
offset_top = 492.0
offset_right = 362.6667
offset_bottom = 552.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "HP"
horizontal_alignment = 1

[node name="AttackLabel2" type="Label" parent="."]
offset_left = 335.0
offset_top = 492.0
offset_right = 416.6667
offset_bottom = 552.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "Atk"
horizontal_alignment = 1

[node name="DefenseLabel2" type="Label" parent="."]
offset_left = 389.0
offset_top = 492.0
offset_right = 470.6667
offset_bottom = 552.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "Def"
horizontal_alignment = 1

[node name="SpAttackLabel2" type="Label" parent="."]
offset_left = 436.0
offset_top = 492.0
offset_right = 548.0
offset_bottom = 552.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "SpAtk"
horizontal_alignment = 1

[node name="SpDefenseLabel2" type="Label" parent="."]
offset_left = 489.0
offset_top = 492.0
offset_right = 605.0
offset_bottom = 552.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "SpDef"
horizontal_alignment = 1

[node name="SpeedLabel2" type="Label" parent="."]
offset_left = 547.0
offset_top = 492.0
offset_right = 628.6667
offset_bottom = 552.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
text = "Spd"
horizontal_alignment = 1

[node name="LearnsetScreen" type="Node2D" parent="."]

[node name="ColorRect4" type="ColorRect" parent="LearnsetScreen"]
offset_top = 92.0
offset_right = 601.0
offset_bottom = 538.0
color = Color(0.1254902, 0.16470589, 0.1254902, 1)

[node name="SearchLineEdit" type="TextEdit" parent="."]
offset_left = 381.0
offset_top = 11.0
offset_right = 801.0
offset_bottom = 93.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
placeholder_text = "Search...."
context_menu_enabled = false
emoji_menu_enabled = false
deselect_on_focus_loss_enabled = false

[node name="SearchResultsList" type="ItemList" parent="."]
offset_left = 386.0
offset_top = 51.0
offset_right = 886.0
offset_bottom = 114.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 64
max_text_lines = 5
auto_height = true
item_count = 1
item_0/text = "s"

[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="PokemonButton" to="." method="_on_pokemon_button_pressed"]
[connection signal="pressed" from="LearnsetButton" to="." method="_on_learnset_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
